--- a/client/package.json
+++ b/client/package.json
@@ -19,10 +19,19 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "highcharts": "^8.0.4",
+    "highcharts-react-official": "^3.0.0",
     "lodash": "^4.17.15",
     "morgan": "^1.9.1",
+    "react-redux": "^7.2.0",
     "redis": "^3.0.2",
     "request": "^2.88.2",
     "request-promise": "^4.2.5"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.150",
+    "@types/react": "^16.9.34",
+    "@types/react-redux": "^7.1.7",
+    "react-chartjs-2": "^2.9.0"
   }
 }
