--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,11 @@ services:
       - "81:7777"
     environment:
       - REDIS_HOST=redis
+      - SERVICE_HOST=back
+      - SERVICE_PORT=3000
+    depends_on:
+      - back
+      - redis
   redis:
     image: "redis:alpine"
   mongo:
@@ -15,4 +20,11 @@ services:
     ports:
       - "82:3000"
     environment:
+      - DB_HOST=mongo
       - PORT=3000
+  data:
+    build: ./data-importer
+    depends_on:
+      - back
+    links:
+      - "back:back"
